fixed layout issue

--- a/client/src/dashboard/dashboard.css
+++ b/client/src/dashboard/dashboard.css
@@ -19,7 +19,7 @@ header {
 }
 
 ul {
-  text-align: right;
+  text-align: left;
 }
 
 @media (max-width: 600px) {
